chore(NewsArchive): fix alignment and spacing issues

--- a/src/StockportWebapp/wwwroot/assets/sass/stockportgov/modules/_callToAction.scss
+++ b/src/StockportWebapp/wwwroot/assets/sass/stockportgov/modules/_callToAction.scss
@@ -40,10 +40,6 @@
             margin-bottom: 2em;
             color: white;
         }
-
-        &--width-60 {
-            width: 60%;
-        }
     }
 
     &--grey, &--grey-light {
