--- a/src/StockportWebapp/wwwroot/assets/sass/stockportgov/modules/_newsArticle.scss
+++ b/src/StockportWebapp/wwwroot/assets/sass/stockportgov/modules/_newsArticle.scss
@@ -25,12 +25,16 @@
     }
 
     &__container {
-        @media #{$tablet} {
-            margin-bottom: 0;
-        }
-
         &--margin-bottom {
             margin-bottom: 2em;
+
+            @media #{$tablet} {
+                margin-bottom: 10px;
+            }
+
+            @media #{$mobile} {
+                margin-bottom: 0;
+            }
         }
     }
 
@@ -60,6 +64,10 @@
 
         label {
             font-weight: 500;
+        }
+
+        &-title {
+            margin-bottom: 30px;
         }
 
         &-container {
@@ -286,6 +294,20 @@
     &__section {
         &--margin-top {
             margin-top: 10px;
+        }
+
+        @media #{$desktop} {
+            &--padding-top {
+                padding-top: 10px;
+            }
+        }
+    }
+
+    &__categories {
+        &-container {
+            @media #{$mobile} {
+                margin-bottom: 2em;
+            }
         }
     }
 
